# TapTools

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  CLAUDE.md  CMakeLists.txt  README.md  REVIVAL.md  ReadMe.rtf  ReadMe.txt  STYLE.md  appveyor.yml  build.rb  index.html  package-info.json.in  params.json
.claude/hooks/: session-start.sh
.github/workflows/: build.yml  docs.yml  style.yml
TapTools/: license.txt  package-info.json  readme.txt
TapTools/docs/: tap.5comb~.maxref.xml  tap.anticlick~.maxref.xml  tap.auth.maxref.xml  tap.autoscale~.maxref.xml  tap.biquadcalc.maxref.xml  tap.bits.maxref.xml  tap.buffer.record~.maxref.xml  tap.change.maxref.xml  tap.count~.maxref.xml  tap.dcblock~.maxref.xml  tap.decay_calc.maxref.xml  tap.deviate.maxref.xml  tap.fft.binmodulator~.maxref.xml  tap.filterbank~.maxref.xml  tap.filter~.maxref.xml  tap.gate~.maxref.xml  tap.jit.ali.maxref.xml  tap.jit.delay.maxref.xml  tap.jit.motion.maxref.xml  tap.jit.motion2.maxref.xml  tap.jit.pan.maxref.xml  tap.limiter~.maxref.xml  tap.list.index.maxref.xml  tap.loadbang.maxref.xml  tap.noise~.maxref.xml  tap.overdrive~.maxref.xml  tap.pack.maxref.xml  tap.pan~.maxref.xml  tap.path.maxref.xml  tap.polar~.maxref.xml  tap.procrastinate~.maxref.xml  tap.ramp~.maxref.xml  tap.rms~.maxref.xml  tap.scale~.maxref.xml  tap.semitone2ratio.maxref.xml  tap.smooth.maxref.xml  tap.thru.maxref.xml  tap.thru~.maxref.xml  tap.typecheck~.maxref.xml  tap.unpack.maxref.xml  (+5 more)
TapTools/extras/: TapTools Authorization.maxpat  TapTools Overview.maxpat
TapTools/help/: blue.pfft.binmodulator2~.maxpat  tap.5comb~.maxhelp  tap.adsr~.maxhelp  tap.allpass~.maxhelp  tap.anticlick~.maxhelp  tap.autoscale~.maxhelp  tap.autothru~.maxhelp  tap.buffer.peak~.maxhelp  tap.buffer.record~.maxhelp  tap.buffer.snap~.maxhelp  tap.colorspace.maxhelp  tap.crossfade~.maxhelp  tap.decay_calc.maxhelp  tap.delay.maxhelp  tap.delay~.maxhelp  tap.fft.binmodulator~.maxhelp  tap.filter~.maxhelp  tap.folder.maxhelp  tap.gang.maxhelp  tap.help.dac~.maxpat  tap.helptest.xml  tap.jit.ali.kernel-assist.maxpat  tap.jit.motion+.maxhelp  tap.jit.motion.maxhelp  tap.jit.motion2.maxhelp  tap.jit.proximity.maxhelp  tap.lfo~.maxhelp  tap.list.index.maxhelp  tap.loadbang.maxhelp  tap.midimapper.maxhelp  tap.nr~.maxhelp  tap.pulserouter~.maxhelp  tap.random.maxhelp  tap.rms~.maxhelp  tap.rotate.maxhelp  (+12 more)
bench/: CMakeLists.txt  README.md  compare.py  diode_bench.cpp  fft_bench.cpp  svf_bench.cpp
bench/baselines/: linux-x64-gcc-container-diode.json  linux-x64-gcc-container.json
book/: PLAN-figures.md  PLAN-pitch-chapters.md  book.toml
build_test/: CMakeCache.txt  CTestTestfile.cmake  cmake_install.cmake
cmake/: TapToolsKernelConfig.cmake.in
docs/: tap.adsr~.maxref.xml  tap.autothru~.maxref.xml  tap.buffer.peak~.maxref.xml  tap.buffer.record~.maxref.xml  tap.buffer.snap~.maxref.xml  tap.counter~.maxref.xml  tap.dcblock~.maxref.xml  tap.delay.maxref.xml  tap.delay~.maxref.xml  tap.elixir~.maxref.xml  tap.fft.list~.maxref.xml  tap.fft.normalize~.maxref.xml  tap.filecontainer.maxref.xml  tap.filter~.maxref.xml  tap.folder.maxref.xml  tap.gang.maxref.xml  tap.jit.proximity.maxref.xml  tap.jit.sum.maxref.xml  tap.midimapper.maxref.xml  tap.nr~.maxref.xml  tap.prime.maxref.xml  tap.pulsesub~.maxref.xml  tap.radians~.maxref.xml  tap.random.maxref.xml  tap.random~.maxref.xml  tap.rotate.maxref.xml  tap.route.maxref.xml  tap.shift~.maxref.xml  tap.sieve.maxref.xml  tap.sift~.maxref.xml  tap.spectra~.maxref.xml  tap.split~.maxref.xml  tap.sustain~.maxref.xml  tap.svf~.maxref.xml  tap.verb~.maxref.xml  tap.vocoder~.maxref.xml
grabloop~/: jmod.tap.grabloop~.maxpat
help/: TapTools.hello-world.maxhelp  tap.adsr~.maxhelp  tap.badge.maxpat  tap.biquadcalc.maxhelp  tap.buffer.peak~.maxhelp  tap.buffer.snap~.maxhelp  tap.comb~.maxhelp  tap.count~.maxhelp  tap.crossfade~.maxhelp  tap.dcblock~.maxhelp  tap.fft.list~.maxhelp  tap.fft.normalize~.maxhelp  tap.filecontainer.maxhelp  tap.filter~.maxhelp  tap.fourpole~.maxhelp  tap.help.dac~.maxpat  tap.inquisitor.maxhelp  tap.jit.sum.maxhelp  tap.limi~.maxhelp  tap.multitap~.maxhelp  tap.noise~.maxhelp  tap.pulsesub~.maxhelp  tap.shift~.maxhelp  tap.sieve.maxhelp  tap.sift~.maxhelp  tap.spectra~.maxhelp  tap.sustain~.maxhelp  tap.svf~.maxhelp  tap.verb~.maxhelp
max/: license.txt  readme.txt
notebooks/: autowah_validation.ipynb  convolution_reverb.ipynb  ladder.ipynb  overdrive.ipynb  requirements.txt  step_seq.ipynb  svf.ipynb  taptools_py.py  tb303.ipynb  tr808_calibration.ipynb  tr808_swing_vca.ipynb  tune.ipynb  vco.ipynb
objectivemax/: LICENSE.txt  ReadMe.txt
research/: 00-overview.md  01-object-inventory.md  02-history-timeline.md  03-ecosystem-context.md  04-ttblue-jamoma-lineage.md  05-commercial-era-hipno.md  06-community-forums-recovery.md  07-revival-second-life.md  08-git-history-chronicle.md  09-deep-web-recovery-round2.md  10-source-checklist.md  11-interview-guide.md
rtaudio/: .clang-tidy  .gitignore  CHANGES.fork.md  HANDOFF.md  RtAudio.cpp  RtAudio.h  UPSTREAM.md
runtime-tests/: README.md  make_maxtest.py
scripts/: tidy.sh
source/: build.ps1  max.xcconfig
source/projects/tap.spectra_tilde/: CMakeLists.txt  tap.spectra_tilde.cpp  tap.spectra_tilde_test.cpp
source/projects/tap.sustain_tilde/: CMakeLists.txt  tap.sustain_tilde.cpp  tap.sustain_tilde_test.cpp
tests/: CMakeLists.txt  autowah_test.cpp  conv_engine_test.cpp  diode_ladder_test.cpp  fft_test.cpp  grm_comb_test.cpp  nr_test.cpp  overdrive_test.cpp  spectra_test.cpp  step_seq_test.cpp  tb303_voice_test.cpp  tr808_clap_test.cpp  tr808_cowbell_test.cpp  tr808_cymbal_test.cpp  tr808_hat_test.cpp  tr808_kick_test.cpp  tr808_rim_test.cpp  tr808_snare_test.cpp  tr808_tom_test.cpp  tune_test.cpp  vca_test.cpp  vco_test.cpp  vocoder_test.cpp
tools/capi/: CMakeLists.txt  taptools_capi.cpp  taptools_capi.h
tools/render/: CMakeLists.txt  autowah_render.cpp  diode_render.cpp  grm_comb_render.cpp  grm_pitchaccum_render.cpp  ladder_render.cpp  tb303_render.cpp  tr808_render.cpp  vco_render.cpp
(+1026 files in other folders)
